# modules

./: README.md  publish_mods
neuralmods/: README.md  setup.cfg  setup.py
neuralmods/src/neuralmods/neuralsetup/: neuralsetup.py
package/: .setup.cfg.swp  setup.cfg
package/module/: .__init__.py.swp  __init__.py
package_example/: LICENSE  setup.py
package_example/src/package/: __init__.py
