[metadata]
name = packagename-pkg-atd
version = 0.0.1
author = atd
author_email = anthony.demong@live.ca
description = package description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atd-code/modules
project_urls =
    
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
